--- a/src/components/Meals/AvaliableMeals.module.css
+++ b/src/components/Meals/AvaliableMeals.module.css
@@ -5,9 +5,14 @@
   animation: meals-appear 1s ease-out forwards;
 }
 
-.MealsLoading {
+.mealsLoading {
   text-align: center;
   color: #fff;
+}
+
+.mealsError {
+  text-align: center;
+  color: red;
 }
 
 .meals ul {
